--- a/front-end/src/app/component/resultat-classe/resultat-classe.component.html
+++ b/front-end/src/app/component/resultat-classe/resultat-classe.component.html
@@ -21,7 +21,7 @@
 
     <ng-container matColumnDef="nom">
       <th mat-header-cell *matHeaderCellDef> Nom </th>
-      <td mat-cell *matCellDef="let classe"> {{classe.nom}} </td>
+      <td mat-cell *matCellDef="let classe"> {{classe.denomination}} </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
