--- a/front-end/src/app/component/resultat-matiere/resultat-matiere.component.html
+++ b/front-end/src/app/component/resultat-matiere/resultat-matiere.component.html
@@ -1,1 +1,33 @@
-<p>Ce sera à vous d'implémenter pour la gestion des matières.</p>
+<div class="align-center">
+  <button mat-fab extended color="primary" (click)="ajouterMatiere()">
+    <mat-icon>add</mat-icon>
+    Ajouter une matière
+  </button>
+</div>
+<div class="mat-elevation-z8">
+  <table mat-table [dataSource]="dataSource">
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef style="width:10%">
+      </th>
+      <td mat-cell *matCellDef="let matiere" style="width:1%">
+        <button mat-mini-fab matTooltip="Modifier Matière" color="primary" (click)="modifierMatiere(matiere)">
+          <mat-icon>edit</mat-icon>
+        </button>
+        <button mat-mini-fab matTooltip="Supprimer matière" color="warn" (click)="supprimerMatiere(matiere.id)">
+          <mat-icon>delete</mat-icon>
+        </button>
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="nom">
+      <th mat-header-cell *matHeaderCellDef> Nom </th>
+      <td mat-cell *matCellDef="let matiere"> {{matiere.denomination}} </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let matiere; columns: displayedColumns;"></tr>
+  </table>
+
+  <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons aria-label="Sélectionner la page des matières">
+  </mat-paginator>
+</div>
