add Devoir + devoir Details page | Fix endpoint get all classes

--- a/front-end/src/app/component/navbar/navbar.component.html
+++ b/front-end/src/app/component/navbar/navbar.component.html
@@ -3,5 +3,5 @@
   <button mat-raised-button [ngClass]="coleurClasseClassActive" [routerLink]="'/classes'">Classe</button>
   <button mat-raised-button [ngClass]="coleurEtudiantClassActive" [routerLink]="'/etudiants'">Etudiant</button>
   <button mat-raised-button [ngClass]="coleurMatiereClassActive" [routerLink]="'/matieres'">Matiere</button>
-  <button mat-raised-button [ngClass]="coleurDevoirClassActive" (click)="afficherMessage()">Devoir</button>
+  <button mat-raised-button [ngClass]="coleurDevoirClassActive" [routerLink]="'/devoirs'">Devoir</button>
 </div>
