--- a/front-end/src/app/component/resultat-devoir/resultat-devoir.component.html
+++ b/front-end/src/app/component/resultat-devoir/resultat-devoir.component.html
@@ -30,7 +30,7 @@
     </ng-container>
 
     <ng-container matColumnDef="coefficient">
-      <th mat-header-cell *matHeaderCellDef> Nom </th>
+      <th mat-header-cell *matHeaderCellDef> Coefficient </th>
       <td mat-cell *matCellDef="let devoir"> {{devoir.coefficient}} </td>
     </ng-container>
 
