--- a/front-end/src/app/component/accueil/accueil.component.html
+++ b/front-end/src/app/component/accueil/accueil.component.html
@@ -1,1 +1,52 @@
-<p>Ce sera à vous d'implémenter pour la notation.</p>
+<div class="align-center">
+    <button mat-fab extended color="primary" (click)="ajouterEtudiant()">
+      <mat-icon>add</mat-icon>
+      Ajouter un étudiant
+    </button>
+  </div>
+  <div class=" mat-elevation-z8">
+    <table mat-table [dataSource]="dataSource">
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef style="width:10%">
+        </th>
+        <td mat-cell *matCellDef="let etudiant" style="width:1%">
+          <button mat-mini-fab matTooltip="Voir le bulletin de l'étudiant" color="primary" (click)="afficherBulletinEtudiant(etudiant.id)">
+            <mat-icon>visibility</mat-icon>
+          </button>
+        </td>
+      </ng-container>
+  
+      <!-- Nom Column -->
+      <ng-container matColumnDef="nom">
+        <th mat-header-cell *matHeaderCellDef> Nom </th>
+        <td mat-cell *matCellDef="let etudiant"> {{etudiant.nom}} </td>
+      </ng-container>
+  
+      <!-- Prenom Column -->
+      <ng-container matColumnDef="prenom">
+        <th mat-header-cell *matHeaderCellDef> Prénom </th>
+        <td mat-cell *matCellDef="let etudiant"> {{etudiant.prenom}} </td>
+      </ng-container>
+  
+      <!-- Photo Column -->
+      <ng-container matColumnDef="photo">
+        <th mat-header-cell *matHeaderCellDef> Photo </th>
+        <td mat-cell *matCellDef="let etudiant">
+          @if (etudiant.photo) {
+          <img width="50px" height="50px" [src]="etudiant.photo" />
+          }
+        </td>
+      </ng-container>
+  
+      <ng-container matColumnDef="classe">
+        <th mat-header-cell *matHeaderCellDef> Classe </th>
+        <td mat-cell *matCellDef="let etudiant"> {{etudiant.nomClasse}} </td>
+      </ng-container>
+  
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+  
+    <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons aria-label="Selectionner la page des etudiants">
+    </mat-paginator>
+  </div>
